--- a/sample_config.env
+++ b/sample_config.env
@@ -1,33 +1,32 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "6"
+APP_ID = "27515671"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+API_HASH = "8fbf2fa788fdf1ecb424229bc836ffa8"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
+TG_BOT_TOKEN = "6380765721:AAH7IBAIPDpEC_m6XYPsqC9BjeXM-s5v9qM"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "1234567890"
+ADMINS = "2098973647"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "mrismanaziz"
+OWNER = "aryanxteamuniverse"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_GROUP = 0
+FORCE_SUB_GROUP = -1001893659989
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 0
+FORCE_SUB_CHANNEL = -1001724433116
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+CHANNEL_ID = -1002036422815
 
 # URL Database Anda, Ambil dari https://elephantsql.com
-# Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+# Contoh: "postgres://kvsdjrrj:FAbEb71nKTM_SyQuJ0HTbQBx9IXrP_Q2@floppy.db.elephantsql.com/kvsdjrrj""
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
